<resources>
    <string name="app_name">baadbank</string>


    <string name="login_emil_hint">email</string>
    <string name="login_password_hint">password</string>
    <string name="remember_me">remember me</string>
    <string name="forgot_password">forgot password?</string>
    <string name="log_in">Log In</string>
    <string name="no_account">don\'t have an account?</string>
    <string name="register">REGISTER</string>
    <string name="continue_as_guest">continue as guest</string>
    <string name="create_account">Create Account</string>
    <string name="register_full_name_hint">Full Name</string>
    <string name="phone_number">phone number</string>
    <string name="register_lower">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_info">Password reset link will be sent to your email</string>
    <string name="reset">Reset</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="symbol">Symbol</string>
    <string name="name">Name</string>
    <string name="market_cap">Market Cap.</string>
    <string name="gel">₾</string>
    <string name="convert">Convert</string>
    <string name="currency_spinner_text">Select desired currency</string>
    <string name="calculator">Currency Calculator</string>
    <string name="currency_money_amount">enter amount u want to convert</string>
    <string name="currency_tobe_converted">choose cureency u want to be converted</string>
    <string name="crypto_currency">Crypto Currency</string>
    <string name="currency">Currency</string>
    <string name="upload_image">Upload Image</string>
    <string name="save_information">Save Information</string>
    <string name="sign_out">sign out</string>
    <string name="user_information">User Information</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="edit">edit</string>
    <string name="app_s_main_background">app\'s main background</string>
    <string name="app_s_secondary_logo">app\'s secondary logo</string>
    <string name="app_s_name">app\'s name</string>
    <string name="user_s_profile_icon">user\'s profile icon</string>
    <string name="guest">guest</string>
    <string name="enter_current_password">enter current password</string>
    <string name="repeat_new_password">repeat New password</string>
    <string name="save_changes">Save Changes</string>
    <string name="enter_new_password">enter New password</string>
    <string name="repeat_password">repeat password</string>
    <string name="go_back">go back</string>
    <string name="savings">Savings</string>
    <string name="account_ballance">Account Ballance</string>
    <string name="add">ADD</string>
    <string name="take">TAKE</string>
    <string name="edit_user_information">Edit User Information</string>
    <string name="converted">converted</string>
    <string name="price">Price</string>
    <string name="official_rates">official rates</string>
    <string name="commercial_rates">commercial rates</string>
    <string name="sell">sell</string>
    <string name="buy">buy</string>
    <string name="dialog_box_message">Are you sure you want to sign out?</string>
    <string name="don_t_want_to_register">don\'t want to register?</string>
    <string name="currency_exchange_rates">Currency exchange rates</string>
    <string name="welcome_string">Hello, %1$s!</string>
    <string name="entered_amount">Entered Amount</string>
    <string name="calculated_amount">Calculated Amount</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="gbp">GBP</string>
    <string name="password_changed">password changed</string>
    <string name="empty_strings">please fill all fields</string>
    <string name="check_email">please check your email</string>
</resources>