<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:minHeight="250dp"
    tools:context=".ui.dialogs.passwordChange.PasswordChangeDialogFragment">



   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/tvChangePassword"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="32dp"
       android:fontFamily="@font/ubuntu_bold"
       android:text="@string/change_password"
       android:layout_marginStart="32dp"
       android:textSize="20sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etChangeCurrentPassword"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvChangePassword"
        app:startIconDrawable="@drawable/ic_login_key">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/enter_current_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/etChangeCurrentPasswordNewPassword"
       style="@style/TextInputLayoutStyle"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       app:endIconMode="password_toggle"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/etChangeCurrentPassword"
       app:startIconDrawable="@drawable/ic_login_key">


       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/etNewPassword"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:fontFamily="@font/ubuntu_light"
           android:hint="@string/enter_new_password"
           android:imeOptions="actionDone"
           android:inputType="textPassword"
           android:minHeight="48dp"
           tools:ignore="TextContrastCheck" />

   </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/etChangeCurrentPasswordRepeatPassword"
       style="@style/TextInputLayoutStyle"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       app:endIconMode="password_toggle"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/etChangeCurrentPassword"
       app:startIconDrawable="@drawable/ic_login_key">


       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/etRepeatPassword"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:fontFamily="@font/ubuntu_light"
           android:hint="@string/repeat_new_password"
           android:imeOptions="actionDone"
           android:inputType="textPassword"
           android:minHeight="48dp"
           tools:ignore="TextContrastCheck" />

   </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveChanges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_shape_line"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/save_changes"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:elevation="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
         />



</androidx.appcompat.widget.LinearLayoutCompat>