<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.calculator.CalculatorFragment">

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/progress_bar_elevation"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/heading_margin_start"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/calculator"
        android:textColor="@color/bb_black"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toTopOf="@id/gdTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

    <Spinner
        android:id="@+id/spinnerLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/heading_margin_start"
        android:minHeight="@dimen/default_min_height"
        android:contentDescription="@string/currency_tobe_converted"
        app:layout_constraintEnd_toStartOf="@+id/spinnerRight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/heading_margin_start"
        android:contentDescription="@string/currency_spinner_text"
        android:minHeight="@dimen/default_min_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spinnerLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAmount"
        android:layout_width="@dimen/default_150dp"
        android:layout_height="@dimen/default_min_height"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_shape_line"
        android:fontFamily="@font/ubuntu_bold"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="@color/bb_black"
        android:textSize="@dimen/secondary_text_size"
        app:layout_constraintEnd_toStartOf="@id/ivArrowForward"
        app:layout_constraintTop_toBottomOf="@id/spinnerLeft"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivArrowForward"
        android:layout_width="@dimen/default_40dp"
        android:layout_height="@dimen/default_40dp"
        android:src="@drawable/ic_arrow_forward"
        app:layout_constraintBottom_toBottomOf="@id/etAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/etAmount"
        tools:ignore="ImageContrastCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvValue"
        android:layout_width="@dimen/default_150dp"
        android:layout_height="@dimen/default_min_height"
        android:layout_marginEnd="@dimen/default_32dp"
        android:background="@drawable/login_register_button_background"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/bb_black"
        android:textSize="@dimen/secondary_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/etAmount"
        app:layout_constraintStart_toEndOf="@id/ivArrowForward"
        app:layout_constraintTop_toTopOf="@+id/etAmount"
        tools:text="Value" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConvert"
        android:layout_width="100dp"
        android:layout_height="@dimen/default_40dp"
        android:layout_marginTop="@dimen/default_32dp"
        android:background="@drawable/button_shape_line"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/convert"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAmount"
        tools:ignore="TextContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnConvert"
        tools:listitem="@layout/item_calculator" />


</androidx.constraintlayout.widget.ConstraintLayout>