<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.savings.SavingsFragment">


    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/default_20"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/heading_margin_start"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/savings"
        android:textColor="@color/bb_black"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toTopOf="@id/gdTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/default_32dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_32dp"
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/bb_black"
        android:textSize="@dimen/secondary_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gdTop"
        tools:text="Welcome John Smith" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAccountBallance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/account_ballance"
        android:textColor="@color/bb_black"
        android:textSize="@dimen/secondary_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBallance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_16dp"
        android:fontFamily="@font/ubuntu_bold"
        android:maxLines="1"
        android:textColor="@color/bb_black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccountBallance"
        tools:text="0.00₾" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdd"
        android:layout_width="@dimen/default_100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="@dimen/default_32dp"
        android:background="@drawable/button_shape_line"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/add"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toStartOf="@id/gdCenterVertical"
        app:layout_constraintTop_toBottomOf="@id/tvBallance"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="@dimen/default_32dp"
        android:background="@drawable/button_shape_line"
        android:textCursorDrawable="@color/bb_green_01"


        android:fontFamily="@font/ubuntu_bold"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/bb_green_01"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/btnTake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gdCenterVertical"
        app:layout_constraintTop_toTopOf="@id/btnAdd"
        tools:text="100" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTake"
        android:layout_width="@dimen/default_100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_16dp"
        android:layout_marginEnd="@dimen/default_32dp"
        android:background="@drawable/button_shape_line"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/take"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toStartOf="@id/gdCenterVertical"
        app:layout_constraintTop_toBottomOf="@id/btnAdd"
        tools:ignore="TextContrastCheck" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdCenterVertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>